@@ -39,9 +39,12 @@
 /*           2002-01-27 Build 19                                             */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: version.c,v 1.63 2013/08/07 19:44:38 alfred Exp $                     */
+/* $Id: version.c,v 1.64 2013/12/21 19:46:51 alfred Exp $                     */
 /***************************************************************************** 
  * $Log: version.c,v $
+ * Revision 1.64  2013/12/21 19:46:51  alfred
+ * - dynamically resize code buffer
+ *
  * Revision 1.63  2013/08/07 19:44:38  alfred
  * - add test for overlong lines
  *
@@ -269,8 +272,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version="1.42 Beta [Bld 89]";
-char *DebVersion = "1.42bld89-1";
+char *Version="1.42 Beta [Bld 90]";
+char *DebVersion = "1.42bld90-1";
 LongInt VerNo=0x142f;
 
 char *InfoMessCopyright="(C) 1992,2013 Alfred Arnold";
