@@ -1,4 +1,4 @@
-$Id: changelog,v 1.76 2013/08/07 19:44:37 alfred Exp $
+$Id: changelog,v 1.77 2013/12/21 19:46:51 alfred Exp $
 ------------------------------------------------------------------------------
 v1.41r3 Aenderungen: (-->v1.41r4beta)
 
@@ -1270,3 +1270,11 @@ v1.41r8 Aenderungen: (-->v1.42beta)
 - Addition    : add COP440 target
 
 - Bugfix      : better handling of overlong souce code lines
+
+2013-12-21 [Bld90]
+
+- Bugfix      : IRPC messed up local symbol handling
+
+- Bugfix      : correct handling of escaped quotes in string constants
+
+- Change      : allow up to 64K code per line
